[package]
name = "rich-swap"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "crates/*"]

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
syn = "1.0"
anyhow =  "1"
thiserror = "1"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"
hex = "0.4"
lazy_static = "1.5"
bitcoin = { version = "0.32.4", default-features = false, features = ["base64", "serde"] }
ic-stable-structures = "0.6"
ciborium = "0.2.1"
rune-indexer = { path = "./crates/rune-indexer" }
ic-log = { path = "./crates/ic-log" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }

[features]
dev = []
default = ["dev"]
