[package]
name = "rich-swap"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "crates/*"]

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
syn = "1.0"
anyhow =  "1"
thiserror = "1"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"
hex = "0.4"
lazy_static = "1.5"
ic-stable-structures = "0.6"
ciborium = "0.2"
ree-types-v3 = { version = "0.3", package = "ree-types" }
ree-types = { git =  "https://github.com/octopus-network/ree-types.git", rev = "1bc6810a7aac2576c32bdca26b6dd399b1a307eb" }
rune-indexer = { path = "./crates/rune-indexer" }
ic-log = { path = "./crates/ic-log" }
chain-key = { path = "./crates/chain-key" }
bitcoin-canister = { path = "./crates/bitcoin-canister" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
serde_json = "1.0"
serde_bytes = "0.11.17"

[features]
testnet = []
default = []
