[package]
name = "extract-fee-cli"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Bitcoin-related dependencies
bitcoin = { version = "0.32", features = ["base64", "rand"] }
bdk = { version = "0.28.2", features = ["keys-bip39", "all-keys", "rpc"] }

# Network and RPC communication
reqwest = { version = "0.11", features = ["json", "blocking"] }
ureq = { version = "2.6.2", features = ["json", "charset"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4.3"
base64 = "0.21.0"

# Internet Computer (IC) related libraries
ic-agent = "0.40"
ic-utils = "0.40"
candid = "0.10"

# Async runtime
tokio = { version = "1.25", features = ["full"] }

# CLI and error handling
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"
serde_with = "3.12.0"
ordinals = "0.0.15"
ree-types = { git = "https://github.com/octopus-network/ree-types.git", branch = "v0.5.0-dev" }
